# zensical-wavedrom-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: zensical.toml
demo/docs/: index.md
tests/: test_e2e.py  test_e2e_mkdocs.py  test_wavedrom.py
tests/e2e_default/: zensical.toml
tests/e2e_embed_svg/: zensical.toml
tests/e2e_mkdocs_default/: mkdocs.yml
tests/e2e_mkdocs_embed_svg/: mkdocs.yml
tests/e2e_mkdocs_pymdownx/: mkdocs.yml
tests/e2e_mkdocs_pymdownx_embed_svg/: mkdocs.yml
tests/e2e_pymdownx/: zensical.toml
tests/e2e_pymdownx/docs/: index.md
tests/e2e_pymdownx_embed_svg/: zensical.toml
zensical_wavedrom_plugin/: __init__.py  extension.py
